# tensorrt-tutorial

./: .gitignore  README.md
.devcontainer/: devcontainer.json
1.cuda-driver-api/: CMakeLists.txt
1.cuda-driver-api/1.1-cuinit/: CMakeLists.txt  cuinit.cpp
1.cuda-driver-api/1.2-context/: CMakeLists.txt  context.cpp
1.cuda-driver-api/1.3-memeory/: CMakeLists.txt  memory.cpp
2.cuda-runtime-api/: CMakeLists.txt
2.cuda-runtime-api/2.1-hello-runtime/: CMakeLists.txt  main.cpp
2.cuda-runtime-api/2.10-warpaffine/: CMakeLists.txt
2.cuda-runtime-api/2.10-warpaffine/src/: affine.cu  main.cpp
2.cuda-runtime-api/2.12-yolov5-postprocess/: CMakeLists.txt
2.cuda-runtime-api/2.12-yolov5-postprocess/src/: box.hpp  decode_gpu.cu  kernel.cu  main.cpp  utils.hpp
2.cuda-runtime-api/2.2-memory/: CMakeLists.txt  main.cpp
2.cuda-runtime-api/2.3-stream/: CMakeLists.txt  readme.md
2.cuda-runtime-api/2.3-stream/src/: main.cpp
2.cuda-runtime-api/2.4-kernel-function/: CMakeLists.txt  readme.md
2.cuda-runtime-api/2.4-kernel-function/src/: kernel.cu  main.cpp
2.cuda-runtime-api/2.5-thread-layout/: CMakeLists.txt
2.cuda-runtime-api/2.5-thread-layout/src/: limit_test.cu  main.cpp
2.cuda-runtime-api/2.6-vector-add/: CMakeLists.txt
2.cuda-runtime-api/2.6-vector-add/src/: kernel.cu  main.cpp
2.cuda-runtime-api/2.7-shared-memory/: CMakeLists.txt  readme.md
2.cuda-runtime-api/2.7-shared-memory/src/: kernel.cu  main.cpp
2.cuda-runtime-api/2.8-reduce-sum/: CMakeLists.txt  readme.md
2.cuda-runtime-api/2.8-reduce-sum/src/: kernel.cu  main.cpp
3.tensorrt-basic/: CMakeLists.txt
3.tensorrt-basic/3.1.hello-tensorrt/: CMakeLists.txt
3.tensorrt-basic/3.1.hello-tensorrt/src/: main.cpp
3.tensorrt-basic/3.2.hello-inference/: CMakeLists.txt
3.tensorrt-basic/3.2.hello-inference/src/: main.cpp
3.tensorrt-basic/3.3.cnn-and-dynamic-shape/: CMakeLists.txt
3.tensorrt-basic/3.3.cnn-and-dynamic-shape/src/: main.cpp
3.tensorrt-basic/3.4.onnx-editor/: make-onnx-pb.sh  myread.py
3.tensorrt-basic/3.5.onnx-parser/: CMakeLists.txt
3.tensorrt-basic/3.5.onnx-parser/src/: main.cpp
4.tensorrt-integrate/: CMakeLists.txt
4.tensorrt-integrate/4.1.full-cnn-classifier/: CMakeLists.txt  gen-onnx.py
4.tensorrt-integrate/4.1.full-cnn-classifier/src/: main.cpp
4.tensorrt-integrate/4.12.multithread/: CMakeLists.txt
4.tensorrt-integrate/4.12.multithread/src/: future_test.cpp  infer.cpp  infer.hpp  main.cpp
4.tensorrt-integrate/4.13.builder/: CMakeLists.txt  gen-onnx.py
4.tensorrt-integrate/4.13.builder/src/: cuda_tools.cpp  cuda_tools.hpp  logger.cpp  logger.hpp  main.cpp  trt_builder.cpp  trt_builder.hpp
4.tensorrt-integrate/4.2.yolov5-detect/: CMakeLists.txt  detect-for-yolov5-6.0.sh  export-yolov5-6.0.sh
4.tensorrt-integrate/4.2.yolov5-detect/src/: main.cpp
4.tensorrt-integrate/4.3.yolov11-detect/: CMakeLists.txt  readme.md
4.tensorrt-integrate/4.3.yolov11-detect/src/: main.cpp
4.tensorrt-integrate/4.4.yolov11-seg/: CMakeLists.txt
4.tensorrt-integrate/4.4.yolov11-seg/src/: main.cpp
4.tensorrt-integrate/4.5.unet/src/: main.cpp
4.tensorrt-integrate/4.6.yolov5-seg/: CMakeLists.txt
4.tensorrt-integrate/4.6.yolov5-seg/src/: main.cpp  yolo_seg_decode.cu
